<resources>

    <!--EXAMPLE of STRING RESOURCE FORMATTING-->
    <!--<string name="group_name_format">Group name: \"%s\"</string>-->
    <!--EXAMPLE of STRING RESOURCE HTML FORMATTING-->
    <!--<string name="group_format"><![CDATA[<b>Group:</b> id=%d, name=%s]]></string>-->

    <string name="app_name" translatable="false">Group expenses app</string>
    <string name="about_text" translatable="false">\"Application for splitting group expenses\" thesis project at Polish-Japanese Academy of Information Technology developed by Oleksandr Bieliakov and Volodymyr Dovhyi.</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="reset_button">Reset</string>
    <string name="submit_button">Submit</string>
    <string name="add_new_group_button">New group</string>
    <string name="join_group_button">Join group</string>
    <string name="new_invitation_code_button">Generate new code</string>
    <string name="new_invitation_code_generated_success">Invitation code generated successfully</string>
    <string name="new_invitation_code_generated_failed">Could not generate invitation code</string>
    <string name="copied_invitation_code">Invitation code copied to clipboard</string>
    <string name="groups_list_fragment_label">Groups</string>
    <string name="group_members_list_fragment_label">Group members</string>
    <string name="group_members_label">Group members</string>
    <string name="group_fragment_label">Group</string>
    <string name="new_group_fragment_label">New group</string>
    <string name="login_fragment_label">Login</string>
    <string name="logout_fragment_label">Logout</string>
    <string name="join_group_fragment_label">Join group</string>
    <string name="invite_to_group_fragment_label">Invite to group</string>
    <string name="new_spending_fragment_label">New spending</string>
    <string name="new_payoff_fragment_label">New payoff</string>
    <string name="balances_fragment_label">Balances</string>
    <string name="spendings_label">Spendings</string>
    <string name="balances_label">Balances</string>
    <string name="balances_button">Balances</string>
    <string name="spending_label">Spending</string>
    <string name="shares_label">Paid for</string>
    <string name="comments_label">Comments</string>
    <string name="share_label">Share</string>
    <string name="about_label">About</string>
    <string name="group_name">Group name</string>
    <string name="invalid_group_name_error">Invalid group name</string>
    <string name="spending_title">Spending title</string>
    <string name="payoff_title">Payoff title</string>
    <string name="invalid_spending_title_error">Invalid spending title</string>
    <string name="invitation_code_label">Invitation code:</string>
    <string name="invitation_code_hind">Invitation code</string>
    <string name="invalid_invitation_code_error">Invalid invitation code</string>
    <string name="current_membership_groups_list_header">Current membership</string>
    <string name="former_membership_groups_list_header">Former membership</string>
    <string name="failed_groups_upload">Could not load groups from server</string>
    <string name="successful_groups_upload">Loaded groups from server</string>
    <string name="failed_spendings_upload">Could not load spendings from server</string>
    <string name="successful_spendings_upload">Loaded spendings from server</string>
    <string name="failed_balances_upload">Could not load balances from server</string>
    <string name="successful_balances_upload">Loaded balances from server</string>
    <string name="filtering_menu_group">Filtering:</string>
    <string name="filtering_group_all_menu_item">All</string>
    <string name="filtering_group_current_menu_item">Current</string>
    <string name="filtering_group_former_menu_item">Former</string>
    <string name="leave_group_menu_item">Leave group</string>
    <string name="delete_spending_menu_item">Delete spending</string>
    <string name="failed_delete_spending">Could not delete spending from server</string>
    <string name="successful_spending_shares_upload">Loaded spending shares from server</string>
    <string name="failed_spending_shares_upload">Could not load spending shares from server</string>
    <string name="leave_group_dialog_message">Leave group?\nYou will no longer have access to group data</string>
    <string name="delete_spending_dialog_message">Delete spending?</string>
    <string name="general_menu_group">General:</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="payoff_button">Pay off</string>
    <string name="time_created_label">Time created:</string>
    <string name="added_by_label">Added by:</string>
    <string name="time_paid_label">Time paid:</string>
    <string name="paid_by_label">Paid by:</string>
    <string name="total_amount_label">Total:</string>
    <string name="split_equal_label">Equal split:</string>
    <string name="paid_for_label">Paid for:</string>
    <string name="paid_to_label">Paid to:</string>
    <string name="blank_error">Cannot be blank</string>
    <string name="failed_save_new_group">Could not save group to server</string>
    <string name="failed_join_group">Could not join group</string>
    <string name="cannot_contain_whitespaces_error">Cannot contain spaces</string>
    <string name="must_contain_letters_and_digits_error">Must contain only latin letters and digits</string>
    <string name="copy_button">Copy</string>
    <string name="failed_get_invite_code">Could not load invitation code from server</string>
    <string name="successful_invitation_code_upload">Loaded invitation code from server</string>
    <string name="failed_leave_group">Could not leave group</string>
    <string name="successful_group_members_upload">Loaded group members from server</string>
    <string name="failed_group_members_upload">Could not load group members from server</string>
    <string name="failed_save_new_spending">Could not save spending to server</string>
    <string name="failed_save_new_payoff">Could not save payoff to server</string>
    <string name="successful_payoffs_upload">Loaded payoffs from server</string>
    <string name="failed_payoffs_upload">Could not load payoffs from server</string>
    <string name="payoffs_label">Payoffs</string>
    <string name="payoffs_list_fragment_label">Payoffs</string>
    <string name="payoffs_button">Payoffs</string>
    <string name="failed_delete_payoff">Could not delete payoff from server</string>
    <string name="payoff_fragment_label">Payoff</string>
    <string name="delete_payoff_menu_item">Delete payoff</string>
    <string name="delete_payoff_dialog_message">Delete payoff?</string>
</resources>