<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.newspending.NewSpendingFragment">

    <data>

        <variable
            name="newSpendingViewModel"
            type="com.splitspendings.groupexpensesandroid.screens.newspending.NewSpendingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/status_layout"
            layout="@layout/status_with_loading_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_spending_title_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/spending_title"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:endIconMode="clear_text"
            app:error="@{newSpendingViewModel.titleInputError}"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_spending_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/paid_by_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/paid_by_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_spending_title_layout" />

        <Spinner
            android:id="@+id/paid_by_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_normal"
            app:layout_constraintBaseline_toBaselineOf="@id/paid_by_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/total_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/total_amount_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paid_by_label" />

        <com.cottacush.android.currencyedittext.CurrencyEditText
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_normal"
            app:layout_constraintBaseline_toBaselineOf="@id/total_amount_label"
            app:layout_constraintEnd_toStartOf="@+id/currency_picker"
            app:useCurrencySymbolAsHint="false"
            tools:text="123.99" />

        <Spinner
            android:id="@+id/currency_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_normal"
            app:layout_constraintBaseline_toBaselineOf="@id/total_amount_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/split_equal_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/split_equal_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_amount_label" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/split_equal_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_normal"
            app:layout_constraintBaseline_toBaselineOf="@+id/split_equal_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/paid_for_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/paid_for_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/split_equal_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/new_shares_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/spacing_half"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintTop_toBottomOf="@+id/paid_for_label"
            app:newSharesList="@{newSpendingViewModel.newShares}" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:onClick="@{() -> newSpendingViewModel.onSubmit()}"
            android:text="@string/submit_button"
            app:buttonWhileSubmitLoading="@{newSpendingViewModel.submitStatus}"
            app:equalSplit="@{newSpendingViewModel.equalSplit}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:numberOfShares="@{newSpendingViewModel.spendingNumberOfShares}"
            app:spendingTitle="@{newSpendingViewModel.title}"
            app:spendingTotalAmount="@{newSpendingViewModel.totalAmount}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>